--- a/prototype/html/wc.html
+++ b/prototype/html/wc.html
@@ -1,34 +1,38 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="ja">
+
 <head>
-<meta charset="UFT-8">
-<title>Watcher of Compartment</title>
-<link rel="stylesheet" href="css/wc.css">
+  <meta charset="UFT-8">
+  <title>Watcher of Compartment</title>
+  <link rel="stylesheet" href="css/wc.css">
 </head>
+
 <body>
-<h1>Watcher of Compartment</h1>
-<h3>～トイレとお腹の渋滞緩和から始める働き方改革～</h3>
-<div id="container">
-<h4>商船三井ビル2階　個室の空き状況を(ほぼ)リアルタイムにお知らせします</h4>
-<h4>男子トイレの空きは残り(〇の数)室！　走れ！!</h4>
-<!--ここに見取り図を貼る-->
-<img src="image/layout.png" alt="男子トイレ図"  width="540" height="210">
-<p>
-<table id="smp1">
-  <tr>
-    <th>001</th>
-    <th>002</th>
-    <th>003</th>
-    <th>004</th>
-  </tr>
-  <tr>
-    <td>〇</td>
-    <td>〇</td>
-    <td>〇</td>
-    <td>〇</td>
-  </tr>
-</table>
-</p>
-</div>
+  <h1>Watcher of Compartment</h1>
+  <h3>～トイレとお腹の渋滞緩和から始める働き方改革～</h3>
+  <div id="container">
+    <h4>商船三井ビル2階　個室の空き状況を(ほぼ)リアルタイムにお知らせします</h4>
+    <h4>男子トイレの空きは残り(〇の数)室！　走れ！!</h4>
+    <!--ここに見取り図を貼る-->
+    <img src="image/layout.png" alt="男子トイレ図" width="540" height="210">
+    <p>
+      <table id="smp1">
+        <tr>
+          <th>001</th>
+          <th>002</th>
+          <th>003</th>
+          <th>004</th>
+        </tr>
+        <tr>
+          <td>〇</td>
+          <td>〇</td>
+          <td>〇</td>
+          <td>〇</td>
+        </tr>
+      </table>
+    </p>
+  </div>
 </body>
+
 </html>
