--- a/prototype/html/wc.html
+++ b/prototype/html/wc.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 
 <head>
-  <meta charset="UFT-8">
+  <meta charset="UTF-8">
   <title>Watcher of Compartment</title>
   <link rel="stylesheet" href="css/wc.css">
 </head>
