--- a/prototype/html/privacyguide.html
+++ b/prototype/html/privacyguide.html
@@ -24,14 +24,14 @@
   </ul>
 
   <h2> 匿名度</h2>
-  <p>利用者が毎日規則正しく（例えば、決まった日、決まった時間、決まった個室）個室を利用し、<br>
-    この行動を第三者に知らせない限り、収集されたデータから利用者個人を特定することは極めて困難である</p>
+  <p>利用者が毎日規則正しく（例えば、決まった日、決まった時間、決まった個室）個室を利用し、<br> この行動を第三者に知らせない限り、収集されたデータから利用者個人を特定することは極めて困難である
+  </p>
 
 </body>
 
 <footer>
-<a href="index.php">トップページ</a>
-<p>Copyright 2017</p>
+  <a href="index.php">トップページ</a>
+  <p>Copyright 2017</p>
 </footer>
 
 </html>
