change line feed

--- a/prototype/html/privacyguide.html
+++ b/prototype/html/privacyguide.html
@@ -24,7 +24,9 @@
   </ul>
 
   <h2> 匿名度</h2>
-  <p>利用者が毎日規則正しく（例えば、決まった日、決まった時間、決まった個室）個室を利用し、<br> この行動を第三者に知らせない限り、収集されたデータから利用者個人を特定することは極めて困難である
+  <p>
+    利用者が毎日規則正しく（例えば、決まった日、決まった時間、決まった個室）個室を利用し、<br>
+    この行動を第三者に知らせない限り、収集されたデータから利用者個人を特定することは極めて困難である
   </p>
 
 </body>
