フッターのリンクを修正

--- a/html/privacy.html
+++ b/html/privacy.html
@@ -43,14 +43,13 @@
 
 
 	<footer	class="footer">
-	 <ul id = "nav">
-		<li><p>&copy; 2018 MOLIS Laboratory</p></li>
+	 <ul class = "list-inline" style ="margin:auto;">
+		<li>&copy; 2018 MOLIS Laboratory</li>
 		<li><a href="index.php">Home</a></li>
+		<li><a href="https://www.yammer.com/molgroup.com/topics/27207754"><img src="image/favicon.png" class="img-rounded" alt="logo"></li>
 		<li><a href="privacy.html">Privacy</a></li>
 		<li><a href="mailto:user@dammy.com">Contact</a></li>
-		<li><a href="https://www.yammer.com/molgroup.com/topics/27207754">About</a></li>
-
-	</ul>
+		</ul>
 	</footer>
 </div>
 </body>
