--- a/test/post_data.html
+++ b/test/post_data.html
@@ -1,5 +1,6 @@
 <form action="http://localhost/api/compartment/insert_status.php" method="post">
   <input name="g_id" value="1">
   <input name="g_status" value="Y">
+  <input name="g_battery" value="0000">
   <button>Send compartment status</button>
 </form>
